--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@nivo/calendar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
