--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
     "@mui/material": "^5.14.15",
     "@nivo/calendar": "^0.83.0",
     "@nivo/core": "^0.83.0",
+    "@prisma/client": "^5.5.2",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.8.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
